# customer_support_rag

./: README.md  main.py  pyproject.toml  requirements.txt
config/: config.yaml
notebook/: customer_service_bot.ipynb
rag/data_ingestion/: data_ingestion.py
rag/exception/: exception.py
rag/model_loaders/: model_loader.py
rag/model_with_memory/: memory.py
rag/prompts/: prompt.py
rag/retriever/: data_retriever.py
utils/: config.py
